# Matrix-Multiplication-OpenMP

./: .gitignore  CMakeLists.txt  README.md  main.c
